updating cwmspy to cwms-python

--- a/getUSGS_CDA.ipynb
+++ b/getUSGS_CDA.ipynb
@@ -11,9 +11,9 @@
     "#### requirements\n",
     " - pandas library\n",
     " - numpy library\n",
-    " - CWMSpy Library (https://github.com/Enovotny/CWMSpy)\n",
-    " - requests library to be used in CWMSpy\n",
-    " - requests_toolbelt library to be used in CWMSpy"
+    " - cwms-python Library (https://github.com/HydrologicEngineeringCenter/cwms-python)\n",
+    " - requests library to be used in cwms-python\n",
+    " - requests_toolbelt library to be used in cwms-python"
    ]
   },
   {
@@ -30,9 +30,10 @@
     "import json\n",
     "import sys\n",
     "\n",
-    "#import CWMSpy.  CWMSpy can be added by running pip install git+https://github.com/Enovotny/CWMSpy.git\n",
-    "#if you have old vesion of cwmspy created by jetilton installed please uninstall first 'pip uninstall CWMSpy'.\n",
-    "from CWMSpy import CWMS\n"
+    "#import cwms-python.  cwms-python can be added by running \n",
+    "#pip install git+https://github.com/HydrologicEngineeringCenter/cwms-python.git\n",
+    "\n",
+    "from CWMS import CWMS\n"
    ]
   },
   {
