update for changes to cwms-python

--- a/getUSGS_CDA.ipynb
+++ b/getUSGS_CDA.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "#import cwms-python.  cwms-python can be added by running \n",
     "#pip install git+https://github.com/HydrologicEngineeringCenter/cwms-python.git\n",
-    "\n",
+    "sys.path.insert(0, \"C:/Soft/repos/cwms-python/\")\n",
     "from CWMS import CWMS\n"
    ]
   },
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "cwms = CWMS()\n",
-    "cwms.connect(apiRoot, apiKey = apiKey)"
+    "cwms.connect(apiRoot)#, apiKey = apiKey)"
    ]
   },
   {
@@ -409,11 +409,13 @@
     "            #if values are present grab information needed to save to CWMS database using CDA\n",
     "            else:\n",
     "                values = values.reindex(columns=['dateTime','value','qualifiers'])\n",
+    "                #adjust column names to fit cwms-python format.\n",
+    "                values = values.rename(columns={'dateTime': 'date-time', 'qualifiers': 'quality-code'})\n",
     "                values.tsId = tsId #+ '-CDA'#tsId.replace('Web','CDA')\n",
     "                print(values.tsId)\n",
     "                values.units = USGS_data.loc[USGS_Id_param]['variable']['unit']['unitCode']\n",
     "                values.office = row['office-idts']\n",
-    "                values.qualifiers = 0\n",
+    "                values['quality-code'] = 0\n",
     "                print(values.units)\n",
     "                print(values)\n",
     "                #write values to CWMS database\n",
@@ -430,64 +432,6 @@
     "        #print(f'{USGS_Id_param} for {tsId} was not found from USGS API')\n",
     "        NotinAPI.append([tsId,USGS_Id_param])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "856e4634-d40e-4535-95de-4b6d611b1ef9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2430dd2c-0259-4140-92a2-3e64dd45b892",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7798f690-2348-40a8-95f2-9b76806b393a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a406b051-210a-4a27-9aea-e86c34ecc1ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "569be60f-de53-495a-b9fb-8a477dc321cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee056d41-e6f6-4c37-b11b-8bebd869e296",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3837b19d-75da-4d2f-8525-c1e455a0cc4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
