--- a/src/getECCC/getECCC.ipynb
+++ b/src/getECCC/getECCC.ipynb
@@ -86,24 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "60699840-099a-46ac-87f5-70633d75793a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://wm.mvp.ds.usace.army.mil:8243/mvp-data/'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#default apiroot\n",
-    "cwms.api.return_base_url()"
+    "#cwms.api.return_base_url()"
    ]
   },
   {
@@ -133,25 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "67de34b5-2360-4f36-bc2b-57ceaa209646",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://wm.mvp.ds.usace.army.mil:8243/mvp-data/'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "api = cwms.api.init_session(api_root = APIROOT, api_key = apiKey)\n",
     "#defined apiroot\n",
-    "cwms.api.return_base_url()"
+    "#cwms.api.return_base_url()"
    ]
   },
   {
