changed tsId to ts_id

--- a/src/getECCC/getECCC.ipynb
+++ b/src/getECCC/getECCC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b55f6c11-7347-40bf-b582-1d75b04b02af",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9d8c3c4a-cbab-4db2-ad8d-a920cdc92259",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "dc35f976-45c6-4a0e-8c8c-c4b3d695ede9",
    "metadata": {},
    "outputs": [],
@@ -64,16 +64,16 @@
     "           return None, None \n",
     "\n",
     "\n",
-    "def store_eccValues(df, tsId, units, officeId, qualityCode):\n",
+    "def store_eccValues(df, ts_id, units, officeId, qualityCode):\n",
     "    values = df.reindex(columns=['date','value'])\n",
     "    #adjust column names to fit cwms-python format.\n",
     "    values = values.rename(columns={'date': 'date-time', 'value': 'value'})\n",
     "    values['quality-code'] = qualityCode \n",
     "\n",
-    "    #values.tsId = tsId\t #+ '-CDA'#tsId.replace('Web','CDA')\n",
+    "    #values.ts_id = ts_id\t #+ '-CDA'#ts_id.replace('Web','CDA')\n",
     "    #values.units = units\n",
     "    #values.office = officeId\n",
-    "    data = cwms.timeseries_df_to_json(data = values, tsId = tsId, units = units, office_id = officeId)\n",
+    "    data = cwms.timeseries_df_to_json(data = values, ts_id = ts_id, units = units, office_id = officeId)\n",
     "    \n",
     "    #write values to CWMS database\n",
     "    #x = cwms.write_ts(values)\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "60699840-099a-46ac-87f5-70633d75793a",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "54ace64f-544c-40e7-89e3-bbd62f058a7d",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c8101494-22da-4aee-9fec-8c24ef0f1165",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "67de34b5-2360-4f36-bc2b-57ceaa209646",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "efd13216-b7b1-41ab-a983-e09abedb97ba",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7587c11e-0895-4869-a08a-3f33864c1661",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "Souris                            MVP      NaN        NaN"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "f0f0d81d-c6b6-4e43-9a27-7abc93fb03a7",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1238,7 @@
        "50             Norman_Dam-Site2       MVP    05PE029            0.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d4227992-07c0-4635-a5bc-63453c331578",
    "metadata": {},
    "outputs": [
@@ -1318,33 +1318,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2082</th>\n",
+       "      <th>2104</th>\n",
        "      <td>11AC063</td>\n",
        "      <td>SK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2083</th>\n",
+       "      <th>2105</th>\n",
        "      <td>11AC064</td>\n",
        "      <td>SK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2084</th>\n",
+       "      <th>2106</th>\n",
        "      <td>11AC065</td>\n",
        "      <td>SK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2085</th>\n",
+       "      <th>2107</th>\n",
        "      <td>11AC066</td>\n",
        "      <td>SK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2086</th>\n",
+       "      <th>2108</th>\n",
        "      <td>11AC068</td>\n",
        "      <td>SK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2087 rows × 2 columns</p>\n",
+       "<p>2109 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1355,16 +1355,16 @@
        "3       01AF007        NB\n",
        "4       01AF009        NB\n",
        "...         ...       ...\n",
-       "2082    11AC063        SK\n",
-       "2083    11AC064        SK\n",
-       "2084    11AC065        SK\n",
-       "2085    11AC066        SK\n",
-       "2086    11AC068        SK\n",
+       "2104    11AC063        SK\n",
+       "2105    11AC064        SK\n",
+       "2106    11AC065        SK\n",
+       "2107    11AC066        SK\n",
+       "2108    11AC068        SK\n",
        "\n",
-       "[2087 rows x 2 columns]"
+       "[2109 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "387a2f77-77e1-402c-b5d5-0b4479faf431",
    "metadata": {},
    "outputs": [
@@ -1615,14 +1615,6 @@
        "      <td>MB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Melita-GrahamCreek</th>\n",
-       "      <td>Melita-GrahamCreek</td>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05NF008</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>MB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Carnduff</th>\n",
        "      <td>Carnduff</td>\n",
        "      <td>MVP</td>\n",
@@ -1637,14 +1629,6 @@
        "      <td>05NF007</td>\n",
        "      <td>0.0</td>\n",
        "      <td>MB</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Wauchope</th>\n",
-       "      <td>Wauchope</td>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05NF010</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>SK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wawanesa</th>\n",
@@ -1861,10 +1845,8 @@
        "MoosominLake-PipestoneCreek  MoosominLake-PipestoneCreek       MVP    05NE003   \n",
        "Melita-SourisRiver                    Melita-SourisRiver       MVP    05NF001   \n",
        "Melita-AntlerRiver                    Melita-AntlerRiver       MVP    05NF002   \n",
-       "Melita-GrahamCreek                    Melita-GrahamCreek       MVP    05NF008   \n",
        "Carnduff                                        Carnduff       MVP    05NF006   \n",
        "Lyleton                                          Lyleton       MVP    05NF007   \n",
-       "Wauchope                                        Wauchope       MVP    05NF010   \n",
        "Wawanesa                                        Wawanesa       MVP    05NG001   \n",
        "Pipestone                                      Pipestone       MVP    05NG003   \n",
        "WesternCrossing                          WesternCrossing       MVP    05NA003   \n",
@@ -1915,10 +1897,8 @@
        "MoosominLake-PipestoneCreek            0.0        SK  \n",
        "Melita-SourisRiver                     0.0        MB  \n",
        "Melita-AntlerRiver                     0.0        MB  \n",
-       "Melita-GrahamCreek                     0.0        MB  \n",
        "Carnduff                               0.0        SK  \n",
        "Lyleton                                0.0        MB  \n",
-       "Wauchope                               0.0        SK  \n",
        "Wawanesa                               0.0        MB  \n",
        "Pipestone                              0.0        MB  \n",
        "WesternCrossing                        0.0        SK  \n",
@@ -1944,7 +1924,7 @@
        "Norman_Dam-Site2                       0.0        ON  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "cf440be4-0979-4602-b5f6-ff3b784bae87",
    "metadata": {},
    "outputs": [
@@ -2202,7 +2182,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 15 columns</p>\n",
+       "<p>95 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2258,10 +2238,10 @@
        "98            Norman_Dam          MVP    05PE011            0.0        ON  \n",
        "99            Norman_Dam          MVP    05PE011            0.0        ON  \n",
        "\n",
-       "[100 rows x 15 columns]"
+       "[95 rows x 15 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2274,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "e000304b-12f0-4711-a321-c7bdccdbcef9",
    "metadata": {},
    "outputs": [
@@ -2309,6 +2289,7 @@
       "https://dd.weather.gc.ca/hydrometric/csv/SK/hourly/SK_05NB035_hourly_hydrometric.csv\n",
       "Goodwater-CookeCreek.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
       "Goodwater-CookeCreek.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
+      "no values for Goodwater-CookeCreek.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
       "05NB014\n",
       "https://dd.weather.gc.ca/hydrometric/csv/SK/hourly/SK_05NB014_hourly_hydrometric.csv\n",
       "Goodwater.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
@@ -2321,7 +2302,6 @@
       "https://dd.weather.gc.ca/hydrometric/csv/SK/hourly/SK_05NB018_hourly_hydrometric.csv\n",
       "Weyburn.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
       "Weyburn.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
-      "no values for Weyburn.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
       "05NB020\n",
       "https://dd.weather.gc.ca/hydrometric/csv/SK/hourly/SK_05NB020_hourly_hydrometric.csv\n",
       "NickleLake.Elev.Inst.5Minutes.0.Raw-EnvCan\n",
@@ -2380,10 +2360,6 @@
       "https://dd.weather.gc.ca/hydrometric/csv/MB/hourly/MB_05NF002_hourly_hydrometric.csv\n",
       "Melita-AntlerRiver.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
       "Melita-AntlerRiver.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
-      "05NF008\n",
-      "https://dd.weather.gc.ca/hydrometric/csv/MB/hourly/MB_05NF008_hourly_hydrometric.csv\n",
-      "Melita-GrahamCreek.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
-      "Melita-GrahamCreek.Elev.Inst.5Minutes.0.Raw-EnvCan\n",
       "05NF001\n",
       "https://dd.weather.gc.ca/hydrometric/csv/MB/hourly/MB_05NF001_hourly_hydrometric.csv\n",
       "Melita-SourisRiver.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
@@ -2397,11 +2373,6 @@
       "https://dd.weather.gc.ca/hydrometric/csv/MB/hourly/MB_05NF007_hourly_hydrometric.csv\n",
       "Lyleton.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
       "Lyleton.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
-      "05NF010\n",
-      "https://dd.weather.gc.ca/hydrometric/csv/SK/hourly/SK_05NF010_hourly_hydrometric.csv\n",
-      "Wauchope.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
-      "Wauchope.Elev.Inst.5Minutes.0.Raw-EnvCan\n",
-      "Wauchope.Stage.Inst.5Minutes.0.Raw-EnvCan\n",
       "05NG001\n",
       "https://dd.weather.gc.ca/hydrometric/csv/MB/hourly/MB_05NG001_hourly_hydrometric.csv\n",
       "Wawanesa.Flow.Inst.5Minutes.0.Raw-EnvCan\n",
@@ -2509,14 +2480,14 @@
     "        dfStage, dfFlow = ecccParser(url, [prov, eccc_id, 'hourly'])\n",
     "        #dfStage, dfFlow = ecccParser(url, [prov, eccc_id, 'daily'])\n",
     "    if isinstance(dfStage, pd.DataFrame):      \n",
-    "        tsId = row['timeseries-id']\n",
-    "        print(tsId)\n",
+    "        ts_id = row['timeseries-id']\n",
+    "        print(ts_id)\n",
     "        # if flow parameter and there are values, store them\n",
     "        if row.param == 'Flow' and dfFlow.value.isnull().all() == False:\n",
-    "            store_eccValues(dfFlow, tsId, 'cms', officeId, 0)\n",
+    "            store_eccValues(dfFlow, ts_id, 'cms', officeId, 0)\n",
     "        # else store the stage or elevation values\n",
     "        elif dfStage.value.isnull().all() == False:\n",
-    "            store_eccValues(dfStage, tsId, 'm', officeId, 0)\n",
+    "            store_eccValues(dfStage, ts_id, 'm', officeId, 0)\n",
     "        else:\n",
     "            print('no values for '+ row['timeseries-id'])\n",
     "\n"
