--- a/src/getNwsAcis/getAcisData.ipynb
+++ b/src/getNwsAcis/getAcisData.ipynb
@@ -48,7 +48,7 @@
     "        end_idx = min(start_idx + maxRecords, total_rows)\n",
     "        print(f\"Storing rows {start_idx} to {end_idx}\")\n",
     "        data_json = cwms.timeseries_df_to_json(data = df.loc[start_idx:end_idx-1], \n",
-    "                                                   tsId = name, units = units, office_id = OFFICE)\n",
+    "                                                   ts_id = name, units = units, office_id = OFFICE)\n",
     "        #print(data_json)\n",
     "        cwms.store_timeseries(data=data_json)"
    ]
@@ -120,7 +120,7 @@
     "]\n",
     "#ts version to save as\n",
     "version = 'Raw-NWS-ACIS'\n",
-    "# ts element to tsid mapping\n",
+    "# ts element to ts_id mapping\n",
     "tsMapping = {\"pcpn\":f\"Precip.Total.~1Day.1Day.{version}\", \n",
     "    \"snow\":f\"Depth-Inc-Snow.Total.~1Day.1Day.{version}\", \n",
     "    \"snwd\":f\"Depth-Snow.Total.~1Week.1Month.{version}\", \n",
@@ -638,11 +638,11 @@
     "            # Screen out A flag which is paired w/ S flag to signify a multiday total\n",
     "            d['value'] = d['value'].replace(r'[^0-9\\.]', '', regex=True)\n",
     "            # assign timeseries id from mapping dictionary\n",
-    "            tsId = f'{loc}.{tsMapping[param]}'\n",
+    "            ts_id = f'{loc}.{tsMapping[param]}'\n",
     "\n",
     "            #convert to json\n",
     "            data_json = cwms.timeseries_df_to_json(data = d, \n",
-    "                                               tsId = tsId, units = units, office_id = OFFICE)\n",
+    "                                               ts_id = ts_id, units = units, office_id = OFFICE)\n",
     "            #print(data_json)\n",
     "            #store data\n",
     "            #cwms.store_timeseries(data=data_json)\n",
