--- a/src/getECCC/getECCC.ipynb
+++ b/src/getECCC/getECCC.ipynb
@@ -2596,7 +2596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env-cwms",
    "language": "python",
    "name": "python3"
   },
