--- a/src/get_USGS_rating/get_rating_usgs_workflow_shared.ipynb
+++ b/src/get_USGS_rating/get_rating_usgs_workflow_shared.ipynb
@@ -4916,9 +4916,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hecwms",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "hecwms"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4930,7 +4930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
