update ratings script and add rating ini script

--- a/src/get_USGS_rating/get_USGS_ratings.ipynb
+++ b/src/get_USGS_rating/get_USGS_ratings.ipynb
@@ -10,11 +10,10 @@
     "#libraries\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
-    "import sys\n",
-    "sys.path.insert(0, \"C:/Soft/repos/cwms-python\")\n",
     "import cwms\n",
     "from dataretrieval import nwis\n",
-    "import requests"
+    "import requests\n",
+    "from json import loads"
    ]
   },
   {
@@ -24,7 +23,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " ········\n"
@@ -48,11 +47,16 @@
    "source": [
     "def get_rating_ids_from_specs(office_id):\n",
     "    rating_types = ['EXSA', 'CORR', 'BASE']\n",
-    "    templates = ['Stage;Flow.USGS-BASE', 'Stage;Flow.USGS-EXSA', 'Stage;Stage.USGS-CORR']\n",
+    "    #templates = ['Stage;Flow.USGS-BASE', 'Stage;Flow.USGS-EXSA', 'Stage;Stage.USGS-CORR']\n",
     "    rating_specs = cwms.get_rating_specs(office_id=office_id).df\n",
-    "    rating_specs = rating_specs[rating_specs['template-id'].isin(templates)]\n",
+    "    #rating_specs = rating_specs[rating_specs['template-id'].isin(templates)]\n",
+    "    rating_specs = rating_specs.dropna(subset=['description'])\n",
     "    for rating_type in rating_types:\n",
-    "        rating_specs.loc[rating_specs['template-id'].str.contains(f'USGS-{rating_type}'), 'rating-type'] = rating_type\n",
+    "        rating_specs.loc[rating_specs['description'].str.contains(f'USGS-{rating_type}'), 'rating-type'] = rating_type\n",
+    "    rating_specs = rating_specs[(\n",
+    "        rating_specs['rating-type'].isin(rating_types)) & \n",
+    "        (rating_specs['active']==True) & \n",
+    "        (rating_specs['auto-update']==True)]\n",
     "    return rating_specs"
    ]
   },
@@ -1588,7 +1592,22 @@
     "            print(f\"cwms = {cwms_effective_date}, usgs = {usgs_effective_date}\")\n",
     "            usgs_store_rating = convert_usgs_rating_df(usgs_rating,row['rating-type'])\n",
     "            #find out how to get units\n",
-    "            rating_json = cwms.rating_simple_df_to_json(data=usgs_store_rating,rating_id=row['rating-id'],office_id=row['office-id'],units=rating_units[row['rating-type']],effective_date=usgs_effective_date)\n",
+    "            if row['auto-migrate-extension']:\n",
+    "                current_rating = cwms.get_ratings(\n",
+    "                                        rating_id=row['rating-id'],\n",
+    "                                        office_id=row['office-id'],\n",
+    "                                        begin=cwms_effective_date,\n",
+    "                                        end=cwms_effective_date,\n",
+    "                                        method=\"EAGER\",\n",
+    "                                        single_rating_df=True)\n",
+    "                rating_json = current_rating.json\n",
+    "                points_json = loads(usgs_store_rating.to_json(orient=\"records\"))\n",
+    "                rating_json[\"simple-rating\"][\"rating-points\"] = {\"point\": points_json}\n",
+    "                rating_json[\"simple-rating\"][\"effective-date\"] = usgs_effective_date.isoformat()\n",
+    "                del rating_json[\"simple-rating\"][\"create-date\"]\n",
+    "                rating_json[\"simple-rating\"][\"active\"] = row['auto-activate']\n",
+    "            else:\n",
+    "                rating_json = cwms.rating_simple_df_to_json(data=usgs_store_rating,rating_id=row['rating-id'],office_id=row['office-id'],units=rating_units[row['rating-type']],effective_date=usgs_effective_date,active=row['auto-activate'])\n",
     "            response = cwms.update_ratings(data = rating_json, rating_id = row['rating-id'])\n",
     "            print(f'Stored rating for rating id = {row[\"rating-id\"]}, effective date = {usgs_effective_date}')\n",
     "        print(url)"
