updates for new CDA version/cwms_python 6.0

--- a/src/getUSGS/getUSGS_CDA.ipynb
+++ b/src/getUSGS/getUSGS_CDA.ipynb
@@ -146,13 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "99ba82fa-adc4-4268-bb4f-14f59c5e28f3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "#import wincertstore\n",
-    "df = cwms.get_timeseries_group(group_id=\"USGS TS Data Acquisition\",category_id=\"Data Acquisition\",office_id=\"CWMS\").df"
+    "df = cwms.get_timeseries_group(group_id=\"USGS TS Data Acquisition\",category_id=\"Data Acquisition\",office_id=\"MVP\",category_office_id=\"CWMS\",group_office_id=\"CWMS\").df"
    ]
   },
   {
