update for cwms-python version 0.6

--- a/src/getUSGS/getUSGS_CDA.ipynb
+++ b/src/getUSGS/getUSGS_CDA.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "dda0f62c-00e3-4d79-964f-f84a0576e587",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "157f51ee-5f55-4830-9682-76d2662c92cc",
    "metadata": {},
    "outputs": [
@@ -524,33 +524,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Sparta</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05382325</td>\n",
+       "      <th>ADDT2</th>\n",
+       "      <td>SWG</td>\n",
+       "      <td>08073000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>LaCrosse</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05383075</td>\n",
+       "      <th>TULA</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>07164500</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Merrill</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05395000</td>\n",
+       "      <th>KEYS</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>07164200</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>MoundsView</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05288580</td>\n",
+       "      <th>Little SycamoreW-Santa Maria R</th>\n",
+       "      <td>SPL</td>\n",
+       "      <td>09424600</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PilotMound</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05383950</td>\n",
+       "      <th>Stewart Mtn DS-Salt R</th>\n",
+       "      <td>SPL</td>\n",
+       "      <td>09502000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -560,59 +560,59 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CNLM5</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05129200</td>\n",
+       "      <th>DAIM</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>08390500</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SCOM5</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SpringValley</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>GILC</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>07164480</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BensonEBChippewa</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05303470</td>\n",
+       "      <th>BULL</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>07191315</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>BensonShakopee</th>\n",
-       "      <td>MVP</td>\n",
-       "      <td>05304000</td>\n",
+       "      <th>BRSH</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>7191265</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KENW</th>\n",
+       "      <td>SWT</td>\n",
+       "      <td>07191322</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>268 rows × 3 columns</p>\n",
+       "<p>5163 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 office-id  alias-id  attribute\n",
-       "location-id                                    \n",
-       "Sparta                 MVP  05382325        0.0\n",
-       "LaCrosse               MVP  05383075        0.0\n",
-       "Merrill                MVP  05395000        0.0\n",
-       "MoundsView             MVP  05288580        0.0\n",
-       "PilotMound             MVP  05383950        0.0\n",
-       "...                    ...       ...        ...\n",
-       "CNLM5                  MVP  05129200        NaN\n",
-       "SCOM5                  MVP       NaN        NaN\n",
-       "SpringValley           MVP       NaN        NaN\n",
-       "BensonEBChippewa       MVP  05303470        NaN\n",
-       "BensonShakopee         MVP  05304000        NaN\n",
+       "                               office-id    alias-id  attribute\n",
+       "location-id                                                    \n",
+       "ADDT2                                SWG    08073000        0.0\n",
+       "TULA                                 SWT    07164500        0.0\n",
+       "KEYS                                 SWT    07164200        0.0\n",
+       "Little SycamoreW-Santa Maria R       SPL    09424600        0.0\n",
+       "Stewart Mtn DS-Salt R                SPL    09502000        0.0\n",
+       "...                                  ...         ...        ...\n",
+       "DAIM                                 SWT    08390500        NaN\n",
+       "GILC                                 SWT    07164480        NaN\n",
+       "BULL                                 SWT   07191315         NaN\n",
+       "BRSH                                 SWT     7191265        NaN\n",
+       "KENW                                 SWT  07191322          NaN\n",
        "\n",
-       "[268 rows x 3 columns]"
+       "[5163 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
