location attribute fix

--- a/src/getUSGS/getUSGS_CDA.ipynb
+++ b/src/getUSGS/getUSGS_CDA.ipynb
@@ -29,7 +29,7 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "import sys\n",
-    "sys.path.insert(0, \"C:/Soft/repos/cwms-python\")\n",
+    "#sys.path.insert(0, \"C:/Soft/repos/cwms-python\")\n",
     "import cwms\n",
     "import numpy as np"
    ]
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " ········\n"
@@ -618,6 +618,7 @@
     }
    ],
    "source": [
+    "if 'attribute' not in Locdf.columns: Locdf['attribute'] = np.nan\n",
     "Locdf"
    ]
   },
